--- a/rocket-core/build.gradle
+++ b/rocket-core/build.gradle
@@ -21,7 +21,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -31,6 +35,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation "org.robolectric:robolectric:3.6.1"
+
+
     api "io.reactivex.rxjava2:rxjava:2.1.0"
     api "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
+
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='cn.hikyson.rocket'
