--- a/rocket-core/build.gradle
+++ b/rocket-core/build.gradle
@@ -26,6 +26,10 @@ android {
             includeAndroidResources = true
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
